--- a/public/main.css
+++ b/public/main.css
@@ -12,18 +12,22 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 200;
 }
+body{
+  background-color: var(--bgcPrimary);
+}
 :root{
     --bgcPrimary: white;
     --bgcSecundary: rgb(233, 233, 233);
     --sectionBorderColor: rgb(200, 200, 200);
-    --borderColor: black;
+    --borderColor: rgb(180, 180, 180);
     --letterColor: black;
     --invertedIconColor: invert(100%);
     --iconColor: invert(0);
     --iphoneCheckboxColor: rgb(0, 255, 0)
 }
 .section {
-    border-bottom: solid 1px var(--sectionBorderColor)
+    border-bottom: solid 1px var(--sectionBorderColor);
+    background-color: var(--bgcPrimary);
 }
 
 input {
@@ -32,6 +36,9 @@ input {
   border: 1px solid var(--borderColor);
   border-radius: 10px;
   padding: 8px;
+}
+.icon{
+  filter: var(--iconColor);
 }
 
 
@@ -64,6 +71,7 @@ input {
   border-radius: 50%;
   border: 1px solid var(--borderColor);
   aspect-ratio: 1/1;
+  filter: invert(0);
 }
 
 
@@ -237,9 +245,7 @@ input {
   left: 100%;
   background-color: var(--bgcPrimary);
 }
-/* #filtersContainer .deployContent > div{
-  display: flex;
-} */
+
 #filtersContainer header{
   display: flex;
   justify-content: space-between;
@@ -262,10 +268,33 @@ input {
 #filtersContainer .deploy input{
   all: revert;
 }
+#filtersContent .deploy{
+  width: 85%;
+  margin: auto;
+}
+#filtersContent .deployContent p{
+  height: fit-content;
+  width: fit-content; 
+  font-size: 18px;
+}
+
+#filtersContent .deployContent input{
+  width: 32px;
+  height: 32px;
+}
+#filtersContent .deployContent > div{
+  margin: 10px; 
+  display: flex;
+  align-items: center;
+}
+#filtersContent .deployContent > div > *{
+  margin: 0 10px; 
+}
 
 /* recipes container */
 
 #recipesContainer{
+  background-color: var(--bgcPrimary);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -318,6 +347,7 @@ input {
 }
 
 #pageControl {
+  background-color: var(--bgcPrimary);
   width: 70%;
   margin: auto;
   display: flex;
